<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <!--账    号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_aline"
            android:textSize="25sp"

            />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/account_hint"
            android:background="@drawable/login_edit"
            android:padding="10dp"
            >
        </EditText>
    </LinearLayout>

    <!--密    码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_aline"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:background="@drawable/login_edit"
            android:padding="10dp"
            >
        </EditText>
    </LinearLayout>

    <!--确认密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmpassword"
            android:textSize="25sp"

            />

        <EditText
            android:id="@+id/register_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirmpassword_hint"
            android:background="@drawable/login_edit"
            android:padding="10dp"
            >
        </EditText>
    </LinearLayout>

    <!--注册-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/register"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@drawable/login_btn"
        >
    </Button>


</LinearLayout>